# Reqcon

./: .gitignore  PRD.md  README.md  boards.yaml  pyproject.toml
launchd/: com.pnle.reqcon.plist
scripts/: daily.sh
src/reqcon/: __init__.py  cli.py  config.py  diff.py  models.py  report.py  state.py
src/reqcon/adapters/: __init__.py  base.py  greenhouse.py  html_scrape.py  workday.py
tests/: conftest.py  test_adapters.py  test_cli.py  test_diff.py  test_html_scrape.py  test_models.py  test_network.py  test_report.py  test_state.py
tests/fixtures/: greenhouse_jobs.json  merl.html  ubicept.html  workday_jobs_page1.json  workday_jobs_page2.json
