[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "reqcon"
version = "0.1.0"
description = "Recon for job reqs: snapshot job boards daily, diff, report changes"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
scrape = ["scrapling[fetchers]>=0.4"]
dev = ["pytest>=8.0"]

[project.scripts]
reqcon = "reqcon.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "network: tests that hit real endpoints (deselected by default)",
]
addopts = "-m 'not network'"
